--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -18,7 +18,7 @@ argo-cd:
       command: [sh, -c]
       args:
         - wget -O argocd-vault-plugin https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v1.8.0/argocd-vault-plugin_1.8.0_linux_amd64 && \
-          chmod +x argocd-vault-plugin && mv argocd-vault-plugin /custom-tools/
+          mv argocd-vault-plugin /custom-tools/
       volumeMounts:
         - mountPath: /custom-tools
           name: custom-tools
