--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -17,8 +17,9 @@ argo-cd:
       image: alpine:3.8
       command: [sh, -c]
       args:
-        - wget -O argocd-vault-plugin https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v1.8.0/argocd-vault-plugin_1.8.0_linux_amd64 && \
-          /usr/bin/chmod +x argocd-vault-plugin && /usr/bin/mv argocd-vault-plugin /custom-tools/
+        - apk add --update chmod mv && \
+          wget -O argocd-vault-plugin https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v1.8.0/argocd-vault-plugin_1.8.0_linux_amd64 && \
+          chmod +x argocd-vault-plugin && mv argocd-vault-plugin /custom-tools/
       volumeMounts:
         - mountPath: /custom-tools
           name: custom-tools
