--- a/src/applications/argocd/templates/secret.yaml
+++ b/src/applications/argocd/templates/secret.yaml
@@ -1,12 +1,12 @@
-kind: Secret
 apiVersion: v1
+kind: Secret
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: {{ .Release.Namespace }}
   name: argocd-vault-plugin-credentials
 type: Opaque
-data:
+stringData:
   AVP_AUTH_TYPE: approle
   AVP_ROLE_ID: your_role_id
   AVP_SECRET_ID: your_secret_id
