--- a/src/applications/argocd/templates/secret.yaml
+++ b/src/applications/argocd/templates/secret.yaml
@@ -7,7 +7,7 @@ metadata:
   name: argocd-vault-plugin-credentials
 type: Opaque
 stringData:
-  AVP_AUTH_TYPE: approle
+  AVP_AUTH_TYPE: token
   AVP_ROLE_ID: your_role_id
   AVP_SECRET_ID: your_secret_id
   AVP_TYPE: vault
