--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -15,7 +15,7 @@ argo-cd:
     initContainers:
     - name: download-tools
       image: alpine:3.8
-      command: [sh, -c]
+      command: ["sh", "-c"]
       args:
         - "wget -O argocd-vault-plugin https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v1.8.0/argocd-vault-plugin_1.8.0_linux_amd64 && apk add --update coreutils && chmod +x argocd-vault-plugin && mv argocd-vault-plugin /custom-tools/"
       volumeMounts:
@@ -25,6 +25,9 @@ argo-cd:
     - mountPath: /usr/local/bin/argocd-vault-plugin
       name: custom-tools
       subPath: argocd-vault-plugin
+    envFrom:
+      - secretRef:
+          name: argocd-vault-plugin-credentials
   server:
     extraArgs:
       - --insecure
@@ -37,10 +40,13 @@ argo-cd:
         clientSecret: Evc9Sx9x5pktvCFsFdFNhn0RhCXGeJZi
         requestedScopes: ["openid", "profile", "email", "groups"]
       configManagementPlugins: |-
-        - name: argocd-vault-plugin
+        - name: argocd-vault-plugin-helm
+          init:
+            command: ["sh", "-c"]
+            args: ["helm dependency build"]
           generate:
-            command: ["argocd-vault-plugin"]
-            args: ["generate", "./", "-s", "{{ .Release.Namespace }}:argocd-vault-plugin-credentials"]
+            command: ["sh", "-c"]
+            args: ["helm template $ARGOCD_APP_NAME . > all.yaml && argocd-vault-plugin generate all.yaml"]
     rbacConfig:
       policy.csv: |
         g, argocd:admins, role:admin
