--- a/src/applications/argocd/templates/secret.yaml
+++ b/src/applications/argocd/templates/secret.yaml
@@ -8,7 +8,6 @@ metadata:
 type: Opaque
 stringData:
   AVP_AUTH_TYPE: token
-  AVP_ROLE_ID: your_role_id
-  AVP_SECRET_ID: your_secret_id
+  VAULT_TOKEN: s.VVztwjEdhI0rTcAbSkqpcfqE
   AVP_TYPE: vault
   VAULT_ADDR: vault-internal.ph-vault
