--- a/src/applications/argocd/templates/secret.yaml
+++ b/src/applications/argocd/templates/secret.yaml
@@ -8,6 +8,6 @@ metadata:
 type: Opaque
 stringData:
   AVP_AUTH_TYPE: token
-  VAULT_TOKEN: s.VVztwjEdhI0rTcAbSkqpcfqE
+  AVP_VAULT_TOKEN: s.VVztwjEdhI0rTcAbSkqpcfqE
   AVP_TYPE: vault
   VAULT_ADDR: vault-internal.ph-vault
