--- a/src/applications/argocd/templates/secret.yaml
+++ b/src/applications/argocd/templates/secret.yaml
@@ -9,5 +9,6 @@ type: Opaque
 stringData:
   AVP_AUTH_TYPE: token
   AVP_VAULT_TOKEN: s.VVztwjEdhI0rTcAbSkqpcfqE
+  VAULT_TOKEN: s.VVztwjEdhI0rTcAbSkqpcfqE
   AVP_TYPE: vault
   VAULT_ADDR: vault-internal.ph-vault
