--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -62,7 +62,7 @@ homer:
           links:
             - name: "Constructions Incongrues"
               url: "https://www.constructions-incongrues.net"
-              target: "_blank" # optional html tag target attribute
+              target: "_blank"
             - name: "Club Jean-Cloude"
               url: "https://www.jeancloude.club"
 
@@ -71,13 +71,33 @@ homer:
           # Leave only a "items" key if not using group (group name, icon & tagstyle are optional, section separation will not be displayed).
           services:
             - name: "Administration"
-              icon: "fas fa-lock"
+              icon: "fas fa-gear"
               items:
                 - name: "État des services"
-                  icon: "fas fa-check"
+                  icon: "fas fa-lock-open"
                   url: "https://status.pastis-hosting.net"
-                  target: "_blank" # optional html tag target attribute
+                  target: "_blank"
+                - name: "ArgoCD"
+                  icon: "fas fa-lock"
+                  url: "https://argocd.pastis-hosting.net"
+                  target: "_blank"
+                - name: "K10"
+                  icon: "fas fa-lock"
+                  url: "https://k10.pastis-hosting.net"
+                  target: "_blank"
                 - name: "Keycloak"
-                  icon: "fas fa-users"
+                  icon: "fas fa-lock"
                   url: "https://keycloak.pastis-hosting.net"
-                  target: "_blank" # optional html tag target attribute
+                  target: "_blank"
+                - name: "Prometheus"
+                  icon: "fas fa-lock"
+                  url: "https://prometheus.pastis-hosting.net"
+                  target: "_blank"
+                - name: "Traefik"
+                  icon: "fas fa-lock"
+                  url: "https://trfk.pastis-hosting.net/dashboard/"
+                  target: "_blank"
+                - name: "Vault"
+                  icon: "fas fa-lock"
+                  url: "https://vault.pastis-hosting.net"
+                  target: "_blank"
