--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -70,32 +70,34 @@ homer:
           # First level array represents a group.
           # Leave only a "items" key if not using group (group name, icon & tagstyle are optional, section separation will not be displayed).
           services:
-            items:
-              - name: "État des services"
-                icon: "fas fa-lock-open"
-                url: "https://status.pastis-hosting.net"
-                target: "_blank"
-              - name: "ArgoCD"
-                icon: "fas fa-lock"
-                url: "https://argocd.pastis-hosting.net"
-                target: "_blank"
-              - name: "K10"
-                icon: "fas fa-lock"
-                url: "https://k10.pastis-hosting.net"
-                target: "_blank"
-              - name: "Keycloak"
-                icon: "fas fa-lock"
-                url: "https://keycloak.pastis-hosting.net"
-                target: "_blank"
-              - name: "Prometheus"
-                icon: "fas fa-lock"
-                url: "https://prometheus.pastis-hosting.net"
-                target: "_blank"
-              - name: "Traefik"
-                icon: "fas fa-lock"
-                url: "https://trfk.pastis-hosting.net/dashboard/"
-                target: "_blank"
-              - name: "Vault"
-                icon: "fas fa-lock"
-                url: "https://vault.pastis-hosting.net"
-                target: "_blank"
+            - name: "Administration"
+              icon: "fas fa-gear"
+              items:
+                - name: "État des services"
+                  icon: "fas fa-lock-open"
+                  url: "https://status.pastis-hosting.net"
+                  target: "_blank"
+                - name: "ArgoCD"
+                  icon: "fas fa-lock"
+                  url: "https://argocd.pastis-hosting.net"
+                  target: "_blank"
+                - name: "K10"
+                  icon: "fas fa-lock"
+                  url: "https://k10.pastis-hosting.net"
+                  target: "_blank"
+                - name: "Keycloak"
+                  icon: "fas fa-lock"
+                  url: "https://keycloak.pastis-hosting.net"
+                  target: "_blank"
+                - name: "Prometheus"
+                  icon: "fas fa-lock"
+                  url: "https://prometheus.pastis-hosting.net"
+                  target: "_blank"
+                - name: "Traefik"
+                  icon: "fas fa-lock"
+                  url: "https://trfk.pastis-hosting.net/dashboard/"
+                  target: "_blank"
+                - name: "Vault"
+                  icon: "fas fa-lock"
+                  url: "https://vault.pastis-hosting.net"
+                  target: "_blank"
