homer sources group

--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -73,10 +73,6 @@ homer:
             - name: "Administration"
               icon: "fas fa-wrench"
               items:
-                - name: "État des services"
-                  icon: "fas fa-lock-open"
-                  url: "https://status.pastis-hosting.net"
-                  target: "_blank"
                 - name: "ArgoCD"
                   icon: "fas fa-lock"
                   url: "https://argocd.pastis-hosting.net"
@@ -97,7 +93,22 @@ homer:
                   icon: "fas fa-lock"
                   url: "https://trfk.pastis-hosting.net/dashboard/"
                   target: "_blank"
+                - name: "Upptime"
+                  icon: "fas fa-lock-open"
+                  url: "https://status.pastis-hosting.net"
+                  target: "_blank"
                 - name: "Vault"
                   icon: "fas fa-lock"
                   url: "https://vault.pastis-hosting.net"
+                  target: "_blank"
+            - name: "Sources"
+              icon: "fas fa-code"
+              items:
+                - name: "k8s"
+                  icon: "fab fa-github"
+                  url: "https://github.com/constructions-incongrues/net.pastis-hosting.k8s"
+                  target: "_blank"
+                - name: "status"
+                  icon: "fab fa-github"
+                  url: "https://github.com/constructions-incongrues/net.pastis-hosting.status"
                   target: "_blank"
