--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -12,6 +12,9 @@ homer:
     # -- Set the container timezone
     TZ: Europe/Paris
 
+  controller:
+    strategy: RollingUpdate
+
   ingress:
       # -- Enable and configure ingress settings for the chart under this key.
       # @default -- See values.yaml
