--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -92,7 +92,7 @@ homer:
                   target: "_blank"
                 - name: "Keycloak"
                   icon: "fas fa-lock"
-                  url: "https://keycloak.pastis-hosting.net"
+                  url: "https://keycloak.pastis-hosting.net/auth/admin/master/console"
                   target: "_blank"
                 - name: "Prometheus"
                   icon: "fas fa-lock"
@@ -131,4 +131,8 @@ homer:
                 - name: "Club Jean-Cloude"
                   icon: "fas fa-fish"
                   url: "https://www.jeancloude.club"
+                  target: "_blank"
+                - name: "Pastis Hosting"
+                  icon: "fas fa-fish"
+                  url: "https://www.pastis-hosting.net"
                   target: "_blank"
