--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -88,6 +88,10 @@ homer:
                   icon: "fas fa-lock"
                   url: "https://keycloak.pastis-hosting.net/auth/admin/master/console"
                   target: "_blank"
+                - name: "OVHcloud"
+                  icon: "fas fa-lock"
+                  url: "https://www.ovh.com/manager/public-cloud/#/pci/projects/de9eaa1e9cc94734bf787165a68f4d01"
+                  target: "_blank"
                 - name: "Prometheus"
                   icon: "fas fa-lock"
                   url: "https://prometheus.pastis-hosting.net"
