--- a/src/applications/keycloak/templates/k10/policy.yaml
+++ b/src/applications/keycloak/templates/k10/policy.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: {{ .Release.Namespace }}
-  name: ph-{{ .Release.Name }}-policy
+  name: k10-{{ .Release.Namespace }}-policy
 spec:
   comment: ""
   frequency: "@daily"
