--- a/src/applications/homer/values.yaml
+++ b/src/applications/homer/values.yaml
@@ -85,6 +85,10 @@ homer:
                   icon: "fas fa-lock"
                   url: "https://argocd.pastis-hosting.net"
                   target: "_blank"
+                - name: "Cloudflare"
+                  icon: "fas fa-lock"
+                  url: "https://dash.cloudflare.com/bb7602930482a97a4a403a52a17cb524/pastis-hosting.net"
+                  target: "_blank"
                 - name: "K10"
                   icon: "fas fa-lock"
                   url: "https://k10.pastis-hosting.net/k10/"
