--- a/src/applications/argocd/templates/applicationset.yaml
+++ b/src/applications/argocd/templates/applicationset.yaml
@@ -27,10 +27,14 @@ spec:
         plugin:
           name: argocd-vault-plugin-helm
           env:
-            AVP_AUTH_TYPE: token
-            VAULT_TOKEN: s.ggzosvQtmd8L0Q8HBL5EG2nt
-            AVP_TYPE: vault
-            VAULT_ADDR: https://vault.pastis-hosting.net
+            - name: AVP_AUTH_TYPE
+              value: token
+            - name: VAULT_TOKEN
+              value: s.ggzosvQtmd8L0Q8HBL5EG2nt
+            - name: AVP_TYPE
+              value: vault
+            - name: VAULT_ADDR
+              value: https://vault.pastis-hosting.net
       syncPolicy:
         automated:
           prune: true
