--- a/src/applications/argocd/values.yaml
+++ b/src/applications/argocd/values.yaml
@@ -14,21 +14,19 @@ argo-cd:
     - name: custom-tools
       emptyDir: {}
     initContainers:
-    - name: download-tools
-      image: alpine:3.8
-      command: ["sh", "-c"]
-      args:
-        - "wget -O argocd-vault-plugin https://github.com/argoproj-labs/argocd-vault-plugin/releases/download/v1.8.0/argocd-vault-plugin_1.8.0_linux_amd64 && apk add --update coreutils && chmod +x argocd-vault-plugin && mv argocd-vault-plugin /custom-tools/"
+    - name: argocd-vault-replacer-install
+      image: ghcr.io/crumbhole/argocd-vault-replacer
+      imagePullPolicy: Always
       volumeMounts:
         - mountPath: /custom-tools
           name: custom-tools
     volumeMounts:
-    - mountPath: /usr/local/bin/argocd-vault-plugin
-      name: custom-tools
-      subPath: argocd-vault-plugin
+    - name: custom-tools
+      mountPath: /usr/local/bin/argocd-vault-replacer
+      subPath: argocd-vault-replacer
     envFrom:
       - secretRef:
-          name: argocd-vault-plugin-credentials
+          name: argocd-vault-replacer-credentials
   server:
     extraArgs:
       - --insecure
@@ -41,14 +39,20 @@ argo-cd:
         clientSecret: Evc9Sx9x5pktvCFsFdFNhn0RhCXGeJZi
         requestedScopes: ["openid", "profile", "email", "groups"]
       configManagementPlugins: |-
-        - name: argocd-vault-plugin-helm
-          init:
-            command: ["sh", "-c"]
-            args: ["helm dependency build"]
+        - name: argocd-vault-replacer
+          generate:
+            command: ["argocd-vault-replacer"]
+        - name: kustomize-argocd-vault-replacer
           generate:
             command: ["sh", "-c"]
-            args: ["helm template $ARGOCD_APP_NAME . > all.yaml && argocd-vault-plugin generate all.yaml"]
-    rbacConfig:
+            args: ["kustomize build . | argocd-vault-replacer"]
+        - name: helm-argocd-vault-replacer
+          init:
+            command: ["/bin/sh", "-c"]
+            args: ["helm dependency build"]
+          generate:
+            command: [sh, -c]
+            args: ["helm template -n $ARGOCD_APP_NAMESPACE $ARGOCD_APP_NAME . | argocd-vault-replacer"]    rbacConfig:
       policy.csv: |
         g, argocd:admins, role:admin
     ingress:
