--- a/src/applications/argocd/templates/argocd-vault-replacer/credentials.yaml
+++ b/src/applications/argocd/templates/argocd-vault-replacer/credentials.yaml
@@ -7,5 +7,5 @@ metadata:
   name: argocd-vault-replacer-credentials
 type: Opaque
 stringData:
-  VAULT_ADDR: vault-internal.ph-vault
+  VAULT_ADDR: http://vault-internal.ph-vault
   VAULT_TOKEN: s.GpFEzwuuG1Pwa7ikhoS2Us7c
