--- a/src/applications/argocd/templates/argocd-vault-replacer/credentials.yaml
+++ b/src/applications/argocd/templates/argocd-vault-replacer/credentials.yaml
@@ -9,4 +9,5 @@ type: Opaque
 stringData:
   VAULT_ADDR: https://vault.pastis-hosting.net
   # VAULT_ADDR: http://vault-internal.ph-vault
+  VAULT_ROLE: argocd-vault-replacer
   VAULT_TOKEN: s.GpFEzwuuG1Pwa7ikhoS2Us7c
