--- a/src/applications/enabled/external-dns/values.yaml
+++ b/src/applications/enabled/external-dns/values.yaml
@@ -2,7 +2,7 @@
 external-dns:
   provider: cloudflare
   cloudflare:
-    apiToken: "<secret:kv/data/pastis-hosting.net/cloudflare~api_token|base64>"
+    apiToken: "BYR8IAr6DNRc5JfUZtGtirRzLJV-XMJAfwYjIKHK"
     proxied: true
   policy: upsert-only
   domainFilters:
