--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -5,7 +5,7 @@ jobs:
   infracost:
     runs-on: ubuntu-latest # The following are JavaScript actions (not Docker)
     env:
-      working-directory: src/terraform!
+      working-directory: src/terraform
 
     name: Run Infracost
     steps:
