--- a/.github/workflows/infracost.yml
+++ b/.github/workflows/infracost.yml
@@ -1,6 +1,6 @@
 # The GitHub Actions docs (https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on)
 # describe other options for 'on', 'pull_request' is a good default.
-on: [push, pull_request]
+on: [pull_request]
 jobs:
   infracost:
     runs-on: ubuntu-latest
