--- a/src/applications/enabled/keycloak/values.yaml
+++ b/src/applications/enabled/keycloak/values.yaml
@@ -24,14 +24,11 @@ keycloak:
         items:
         - key: "realms.json"
           path: "realms.json"
-  auth:
-    createAdminUser: true
-    adminUser: admin
-    adminPassword: admin
   proxyAddressForwarding: true
   postgresql:
-    postgresqlPassword: keycloak
-    postgresqlPostgresPassword: keycloak
+    auth:
+      existingSecret: 
+        name: {{ .Release.Name }}-secrets
     persistence:
       enabled: true
       size: 1Gi
